[package]
name = "pumpkin-data"
version.workspace = true
edition.workspace = true
build = "build/build.rs"

[dependencies]
phf = { version = "0.12.1", features = ["macros"] }
pumpkin-util = { path = "../pumpkin-util" }

serde.workspace = true

[build-dependencies]
pumpkin-util = { path = "../pumpkin-util" }

serde.workspace = true
serde_json.workspace = true

serde_json5 = "0.2.1"
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
rayon.workspace = true
