[package]
name = "pumpkin-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-util = { path = "../pumpkin-util" }

indexmap = { version = "2.10", features = ["serde"] }

serde.workspace = true
serde_json.workspace = true
